# homelab-ai-in-docker

./: .dockerignore  .gitignore  .watchignore  CLAUDE.md  Dockerfile  MODEL_LIFECYCLE_ANALYSIS.md  MODEL_STORAGE_REFACTOR.md  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  run.sh
.github/workflows/: docker-build.yml
docker/: entrypoint.sh
docs/: api-reference.md  deployment.md  index.md  mcp-setup.md  multi-env.md  on-demand-envs.md  product-design.md  tech-design.md  worker.md
envs/cosyvoice/: post_install.sh  pyproject.toml
envs/crawl4ai/: post_install.sh  pyproject.toml
envs/deepseek/: pyproject.toml
envs/deepseek-ocr/: main.py  pyproject.toml
envs/funasr/: pyproject.toml
envs/hunyuan/: pyproject.toml
envs/markitdown/: pyproject.toml
envs/paddle/: pyproject.toml
envs/screenitshot/: post_install.sh  pyproject.toml
envs/transformers/: pyproject.toml
envs/whisper/: pyproject.toml
scripts/: setup_cuda_env.sh
src/: config.py
src/api/catalog/: libs.json  models.json
src/api/models/: automatic_speech_recognition.py  base.py  caption.py  crawl.py  doc_to_markdown.py  doc_to_screenshot.py  embedding.py  embedding_models.json  funasr.py  image_ocr.py  image_segmentation.py  image_to_text.py  models.py  models_manifest.json  speaker_embedding.py  text_generation.py  text_to_embedding.py  text_to_speech.py  whisperx.py
src/api/routers/: automatic_speech_recognition.py  caption.py  crawl.py  doc_to_markdown.py  doc_to_screenshot.py  embedding.py  environments.py  funasr.py  hardware.py  history.py  image_captioning.py  image_ocr.py  image_segmentation.py  image_to_text.py  libs.py  mcp.py  models.py  models_new.py  settings.py  skills.py  speaker_embedding.py  task_options.py  text_generation.py  text_to_embedding.py  text_to_speech.py  whisperx.py
src/api/skills/: skills_manifest.json
src/compat/: __init__.py  torchcodec_stub.py
src/db/: __init__.py  catalog.py  db_config.py  download_logs.py  libs.py  models.py  settings.py  skills.py  status.py  worker_logs.py
src/inference/: __init__.py  deepseek_vl.py  jina_vlm.py  ocr.py  scene_preprocess.py
src/runtime/: cuda_paths.py
src/services/: model_coordinator.py  playwright_installer.py
src/storage/: history.py
src/worker/: __init__.py  base.py  coordinator.py  env_manager.py  image_ocr_worker.py  image_utils.py  manager.py  protocol.py  utils.py
src/worker/workers/: asr_streaming_worker.py  asr_worker.py  captioning_worker.py  crawl_worker.py  diarization_worker.py  embedding_worker.py  funasr_streaming_worker.py  funasr_worker.py  markitdown_worker.py  ocr_worker.py  screenitshot_worker.py  segmentation_worker.py  text_generation_worker.py  tts_worker.py  whisperx_worker.py
tests/: QUICK_REFERENCE.md  README.md  run-all.sh  run-api-tests.sh  run-task-tests.sh  test-config.sh  test-utils.sh
tests/api/: 001-health.sh  002-models-list.sh  003-history-stats.sh  004-crawl.sh
tests/fixtures/: .gitkeep  README.md
tests/tasks/asr/: 501-whisper-turbo.sh  502-speaker-diarization.sh
tests/tasks/image-captioning/: 201-blip-base.sh  202-blip-large.sh  203-llava-detailed.sh
tests/tasks/image-ocr/: 101-paddle-text.sh  102-paddle-markdown.sh  103-deepseek-text.sh  104-deepseek-markdown.sh  105-granite-markdown.sh
tests/tasks/text-embedding/: 301-minilm.sh  302-bge-large.sh
tests/tasks/text-generation/: 401-qwen-basic.sh  402-gemma-chat.sh
ui/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
ui/public/: pcm-processor.js
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/automatic-speech-recognition/: page.tsx
ui/src/app/crawl/: page.tsx
ui/src/app/crawl/[[...tab]]/: page.tsx
ui/src/app/doc-to-markdown/: page.tsx
ui/src/app/doc-to-screenshot/: page.tsx
ui/src/app/embedding/: page.tsx
ui/src/app/embedding/[[...tab]]/: page.tsx
ui/src/app/envs/: page.tsx
ui/src/app/feature-extraction/: page.tsx
ui/src/app/image-caption/: page.tsx
ui/src/app/image-caption/[[...tab]]/: page.tsx
ui/src/app/image-captioning/: page.tsx
ui/src/app/image-ocr/: page.tsx
ui/src/app/image-to-text/: page.tsx
ui/src/app/libs/: page.tsx
ui/src/app/live-transcription/: page.tsx
ui/src/app/models/: page.tsx
ui/src/app/sam/: page.tsx
ui/src/app/settings/: page.tsx
ui/src/app/skills/: page.tsx
ui/src/app/speaker-embedding/: page.tsx
ui/src/app/stats/: page.tsx
ui/src/app/status/: page.tsx
ui/src/app/test/: page.tsx
ui/src/app/text-generation/: page.tsx
ui/src/app/text-to-speech/: page.tsx
ui/src/app/web-crawling/: page.tsx
ui/src/components/: crawl-history.tsx  crawl-input-output.tsx  embedding-history.tsx  footer.tsx  header.tsx  history-panel.tsx  image-caption-history.tsx  image-caption-input-output.tsx  markdown-doc.tsx  models-tab.tsx  task-history.tsx  text-embedding-input-output.tsx  text-generation-history.tsx  text-generation-input-output.tsx  theme-switcher.tsx
ui/src/components/inputs/: audio-player.tsx  audio-recorder-controls.tsx  audio-upload.tsx  image-upload.tsx  index.ts
ui/src/components/try/: index.ts  model-selector.tsx  raw-payload.tsx  skill-selector.tsx  try-layout.tsx  try-panel.tsx
ui/src/docs/: crawl.md
ui/src/lib/: envs.ts  libs.ts  models.ts  skills.ts  tasks.ts
ui/src/types/: api.ts
