[project]
name = "homelab-ai-in-docker"
version = "0.1.0"
description = "REST API service wrapping common AI capabilities for homelab developers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.27.0",
    # Hardware monitoring
    "psutil>=6.0.0",
    "nvidia-ml-py>=12.0.0",
    # MCP server
    "mcp>=1.8.0",
    # Documentation
    "mkdocs-material>=9.5.0",
    # NOTE: All task libs (crawl4ai, markitdown, screenitshot) run in worker
    # subprocesses with their own isolated environments. See envs/ directory.
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"src.api.models" = ["*.json"]
