[project]
name = "cosyvoice-worker"
version = "0.1.0"
description = "CosyVoice text-to-speech worker environment"
requires-python = ">=3.10,<3.11"
dependencies = [
    # NOTE: torch/torchaudio CUDA 12.1 versions are installed via post_install.sh
    # We let PyPI torch be pulled in by dependencies, then post_install.sh
    # upgrades to cu121 versions to match the official CosyVoice demo stack.
    # CosyVoice core dependencies (CosyVoice repo is cloned separately and added to PYTHONPATH)
    "conformer==0.3.2",
    "deepspeed==0.15.1; sys_platform == 'linux'",
    "diffusers==0.29.0",
    "hydra-core==1.3.2",
    "HyperPyYAML==1.2.2",
    "inflect==7.3.1",
    "librosa==0.10.2",
    "lightning==2.2.4",
    "matplotlib==3.7.5",
    "modelscope==1.20.0",
    "networkx==3.1",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "onnx==1.16.0",
    "openai-whisper==20231117",
    "protobuf==4.25.0",
    "pydantic==2.7.0",
    "pyworld==0.3.4",
    "rich==13.7.1",
    "soundfile==0.12.1",
    "tensorboard==2.14.0",
    "transformers==4.51.3",
    "x-transformers==2.11.24",
    "wetext==0.0.4",
    "wget==3.2",
    "gdown==5.1.0",
    "pyarrow==18.1.0",
    # HuggingFace for model downloads
    "huggingface_hub==0.36.0",
    # Worker HTTP server
    "fastapi==0.115.6",
    "fastapi-cli==0.0.4",
    "uvicorn==0.30.0",
    "grpcio==1.57.0",
    "grpcio-tools==1.57.0",
    "gradio==5.4.0",
    # Linux-only dependencies
    "onnxruntime-gpu==1.18.0; platform_system=='Linux'",
    "onnxruntime==1.18.0; platform_system=='Darwin' or platform_system=='Windows'",
    "tensorrt-cu12==10.13.3.9; platform_system=='Linux'",
    "tensorrt-cu12-bindings==10.13.3.9; platform_system=='Linux'",
    "tensorrt-cu12-libs==10.13.3.9; platform_system=='Linux'",
    # Torch versions are installed in post_install.sh from cu121 index
    "torch==2.3.1",
    "torchaudio==2.3.1",
]

[tool.uv]
package = false
