[project]
name = "crawl4ai-worker"
version = "0.1.0"
description = "Worker environment for web crawling with Crawl4AI"
requires-python = ">=3.13"
dependencies = [
    # Web crawling
    "crawl4ai>=0.7.0",
    "playwright>=1.43.0",
    "playwright-stealth>=1.8.0",
    # Worker HTTP server
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[tool.uv]
package = false
