[project]
name = "deepseek-worker"
version = "0.1.0"
description = "DeepSeek models worker environment (transformers==4.47.1)"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.20.0",
    "addict>=2.4.0",
    "bitsandbytes>=0.41.0",
    "easydict>=1.9",
    "einops>=0.7.0",
    "fastapi>=0.115.0",
    "flash-attn>=2.8.3",
    "pillow-heif>=1.0.0",
    "opencv-python-headless>=4.8.0",
    "safetensors>=0.4.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.47.1",
    "uvicorn>=0.32.0",
]

[tool.uv]
package = false

# PyTorch CUDA 12.6 index
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.5.4/flash_attn-2.8.3%2Bcu126torch2.8-cp312-cp312-linux_x86_64.whl" }

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
